feat: Introduce GHCR workflow for publishing Docker images, vulnerability scanning with Trivy, and managing image retention.

--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -76,9 +76,12 @@ jobs:
     permissions:
       packages: write
     steps:
-      - name: Delete untagged images
-        uses: actions/delete-package-versions@v5
+      - name: Delete older images
+        uses: snok/container-retention-policy@v3.0.0
         with:
-          package-name: 'stock-tracker'
-          package-type: 'container'
-          delete-only-untagged-versions: 'true'
+          account: user
+          token: ${{ secrets.GITHUB_TOKEN }}
+          image-names: 'stock-tracker'
+          cut-off: 14d
+          keep-n-most-recent: 20
+  
